--- a/0_Padel_Website/src/css/style.scss
+++ b/0_Padel_Website/src/css/style.scss
@@ -70,6 +70,7 @@ header {
 main {
   background-color: #1f2832;
   color: #f1f1f1;
+  min-height: 75vh;
   section {
     background-color: #a53333;
     margin-top: 10px;
