--- a/0_Padel_Website/src/css/base/_variables.scss
+++ b/0_Padel_Website/src/css/base/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
-// $green: #19ba99;
-// $orange: orange;
-// $red: red;
+$lightblue : #77A1D9;
+$mediumblue: #457ABF;
+$darkblue: #023059;
+$mediumgreen: #A9D962;
+$lightgreen: #D6F2AC;
 //FONT MAPPINGS
 //$primary-font: "Charmonman", cursive;
