--- a/0_Padel_Website/src/css/base/_variables.scss
+++ b/0_Padel_Website/src/css/base/_variables.scss
@@ -1,8 +1,8 @@
 // COLORS
-$lightblue : #77A1D9;
-$mediumblue: #457ABF;
+$lightblue: #77a1d9;
+$mediumblue: #457abf;
 $darkblue: #023059;
-$mediumgreen: #A9D962;
-$lightgreen: #D6F2AC;
+$mediumgreen: #a9d962;
+$lightgreen: #d6f2ac;
 //FONT MAPPINGS
 //$primary-font: "Charmonman", cursive;
