--- a/0_Padel_Website/src/css/style.scss
+++ b/0_Padel_Website/src/css/style.scss
@@ -6,11 +6,12 @@
 
 body {
   font: 16px "Raleway", Helvetica, sans-serif;
+  height: 100%;
 }
 
 div.container {
   margin: 0 auto;
-  width: 1000px;
+  max-width: 1000px;
   text-align: center;
 }
 
@@ -23,6 +24,7 @@ h2 {
 
 header {
   background-color: $darkblue;
+  height: 80px;
   .container {
     display: flex;
     align-items: center;
@@ -71,7 +73,7 @@ header {
 main {
   background-color: $mediumblue;
   color: #f1f1f1;
-  min-height: 75vh;
+  height: calc(100vh - 320px);
   section {
     background-color: $lightgreen;
     margin-top: 10px;
@@ -84,56 +86,79 @@ main {
 footer {
   background-color: $darkblue;
   padding: 20px 0;
+  height: 240px;
   .container {
     display: flex;
     justify-content: space-around;
     align-items: center;
     section {
+      a {
+        color: $lightgreen;
+        transition: all 300ms;
+        &:hover {
+          color: $lightblue;
+        }
+      }
       .social {
         margin-top: 10px;
+        a {
+          font-size: 30px;
+        }
       }
     }
   }
 }
 
 .loginbanner {
-  background-color: $darkblue;
+  background-color: #f1f1f1;
+  min-height: 75vh;
   .login {
     padding-top: 1px;
     text-align: center;
     margin: 0 auto;
-    width: 500px;
+    width: 800px;
     h1 {
-      color: $lightgreen;
-      margin-top: 20px;
+      color: $mediumblue;
+      margin-top: 1.5rem;
+    }
+    h2 {
+      color: $mediumblue;
+      font-size: 20px;
+      margin-bottom: 1.5rem;
+      a {
+        text-decoration: underline;
+        color: $darkblue;
+      }
     }
     form {
       display: flex;
+      justify-content: center;
       flex-direction: column;
       padding: 2em;
-      background-color: $darkblue;
-      border: 1px solid $darkblue;
+      background-color: #f1f1f1;
+      border: 1px solid #f1f1f1;
       border-radius: 5px;
       input,
       button {
         margin: 0.3em 0;
         text-align: center;
         outline: none;
-        border: 1px solid $darkblue;
+        border: 1px solid #f1f1f1;
       }
       input {
-        padding: 1em;
-        color: $lightgreen;
+        padding: 1rem 2.2rem;
+        color: $mediumblue;
         background: transparent;
         border: 0;
         border-bottom: 1px solid;
-
+        width: 500px;
         font-family: inherit;
         font-weight: 300;
         line-height: 1.5;
         margin-bottom: 20px;
+        margin-left: 15.7%;
         &::placeholder {
-          color: $lightgreen;
+          color: $mediumblue;
         }
       }
       .button {
@@ -141,6 +166,7 @@ footer {
         cursor: pointer;
         color: #fff;
         background-color: $mediumgreen;
+        color: $darkblue;
         border: none;
         border-radius: 50px;
         box-shadow: 0 4px #999;
@@ -149,10 +175,10 @@ footer {
         margin-top: 20px;
         padding: 1em 4em;
         &:hover {
-          background-color: $mediumgreen;
+          background-color: $lightblue;
         }
         &:active {
-          background-color: $mediumgreen;
+          background-color: $lightblue;
           box-shadow: 0 3px #888;
           transform: translateY(2px);
         }
