--- a/0_Padel_Website/src/css/styles.css
+++ b/0_Padel_Website/src/css/styles.css
@@ -200,6 +200,9 @@ footer .container section .social a {
     text-align: start;
 }
 .playercard img{
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
     border-radius: 50%;
 }
 
