--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -226,6 +226,6 @@ table.match tr:first-child th{
 }
 
 table.match td:nth-child(n+4){
-    background-color: var(--lightgreen);
+    background-color: var(--mediumgreen);
     border-radius: 20px;
 }
