add player stats of het helemaal klopt weet ik ni

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -171,6 +171,19 @@ footer .container section .social a {
     font-size: 1.875rem;
 }
 
+/* ---------------- PLAYER STATS ---------------- */
+.playerstats {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 3.125rem;
+}
+.playerstats p {
+    background-color: var(--darkblue);
+    padding: 2rem 4rem;
+    border-radius: 20px;
+    color: var(--mediumgreen);
+}
 
 /* ---------------- TOP PLAYERS ---------------- */
 .top_players{
