--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -116,6 +116,7 @@ main h2 a:hover {
     margin: 0 auto;
     margin-bottom: 1.25rem;
     text-align: center;
+    font-size: 1rem;
 }
 #mainform>table.match input{
     font-size: 1rem;
