--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -299,8 +299,22 @@ table.match td:nth-child(1), table.match td:nth-child(3){
 /* ---------------- MATCHES ---------------- */
 .booking {
     margin: 1.25rem;
+    border-collapse: separate;
+    border-spacing: 0 10px;
 }
 
+.booking tr{
+    background-color: var(--lightblue);
+}
+.booking tr td:first-child{
+    border-radius: 40px 0 0 40px;
+}
+.booking tr td:last-child{
+    border-radius: 0 40px 40px 0;
+}
+#mainform .booking input{
+    width: 25rem;
+}
 /* ---------------- FILE UPLOAD ---------------- */
 #imgform {
     display: flex;
