--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -300,7 +300,7 @@ table.match td:nth-child(1), table.match td:nth-child(3){
 .booking {
     margin: 1.25rem;
     border-collapse: separate;
-    border-spacing: 0 10px;
+    border-spacing: 0 20px;
 }
 
 .booking tr{
@@ -308,6 +308,7 @@ table.match td:nth-child(1), table.match td:nth-child(3){
 }
 .booking tr td:first-child{
     border-radius: 40px 0 0 40px;
+    padding-left: 1.25rem;
 }
 .booking tr td:last-child{
     border-radius: 0 40px 40px 0;
